[project]
name = "ahn-virtual-zarr"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastparquet>=2026.5.0",
    "fsspec>=2026.6.0",
    "icechunk>=2.1.1",
    "jupyterlab>=4.6.2",
    "kerchunk>=0.2.10",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "obstore>=0.11.0",
    "s3fs>=2026.6.0",
    "virtual-tiff>=0.5.0",
    "virtualizarr>=2.7.1",
    "xarray>=2026.7.0",
]
